--- a/reconcile/templates/reconcile/register.html
+++ b/reconcile/templates/reconcile/register.html
@@ -15,7 +15,7 @@
 			<button class="btn btn-success" type="submit">Register</button>
 		</form>
 		<br>
-		If you already have an account <a href="/login"><strong>Login</strong></a> instead.
+		If you already have an account <a href="/"><strong>Login</strong></a> instead.
 
 
 {% endblock %}
